# controllers/auth/updateUser.js
@@ -5,15 +5,17 @@ const ctrlWrapper = require("../../decorators/ctrlWrapper");
 const updateUserData = async (req, res) => {
   const { name, birthday, phone, city } = req.body;
   const { _id } = req.user;
+  const avatarURL = req.file.path;
 
   const user = await User.findByIdAndUpdate(
     _id,
-    { name, birthday, phone, city },
+    { name, birthday, phone, city, avatarURL },
     { new: true }
   );
 
   res.json({
     _id,
+    avatarURL: user.avatarURL,
     name: user.name,
     birthday: user.birthday,
     phone: user.phone,
@@ -21,17 +23,6 @@ const updateUserData = async (req, res) => {
   });
 };
 
-const updateUserAvatar = async (req, res) => {
-  const { _id } = req.user;
-  const avatarURL = req.file.path;
-
-  await User.findByIdAndUpdate(_id, { avatarURL });
-  res.json({
-    avatarURL,
-  });
-};
-
 module.exports = {
   updateUserData: ctrlWrapper(updateUserData),
-  updateUserAvatar: ctrlWrapper(updateUserAvatar),
 };
